--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["@babel/preset-react", ["@babel/preset-env", {
-    "modules": "commonjs"
+    "modules": "umd"
   }]],
   "plugins": [
     ["@babel/plugin-proposal-decorators", {
